<resources>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string-array name="units">
        <item>g</item>
        <item>kg</item>
        <item>ml</item>
        <item>l</item>
    </string-array>

    <string name="app_name">Munch Manager</string>
    <string name="pleaseLogin">Please login.</string>
    <string name="registerAcc">Register an account.</string>
    <string name="welcome">Welcome, %s. What would you like to do today?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="registerNew">Register New Account</string>
    <string name="suggested">Suggested recipe</string>
    <string name="flavour">You can view your food items or browse through recipes.</string>
    <string name="allRecipes">All Recipes</string>
    <string name="foodCount">You have %d total food items.</string>
    <string name="allFoods">All Food Items</string>
    <string name="unitCount">x %d units</string>
    <string name="massCount">x %f g</string>
    <string name="capacityCount">x %f ml</string>
    <string name="from">From: %s</string>
    <string name="time">Time: %s</string>
    <string name="itemName">Item Name</string>
    <string name="itemMeasurement">Item Measurement</string>
    <string name="units">units</string>
    <string name="grams">grams</string>
    <string name="ml">millilitres</string>
    <string name="expiration">Expiration date</string>
    <string name="daysLeft">(%d days left)</string>
    <string name="modify">Modify</string>
    <string name="refresh">Refresh</string>
    <string name="delete">Delete [!]</string>
    <string name="serverError">A server error occurred.</string>
    <string name="internalError">An internal error occurred.</string>
    <string name="add">Add</string>

    <string name="item">Item:</string>
    <string name="itemHint">Name</string>
    <string name="amount">Amount:</string>
    <string name="amountHint">Amount (in selected measurement)</string>
    <string name="expiry">Expiration:</string>
    <string name="expiryHint">YYYY/MM/DD</string>
    <string name="noExpiry">No Expiration</string>
    <string name="placeholder">placeholder</string>
    <string name="quantity">Quantity: %f%s</string>
    <string name="leaveBlank">Leave blank for no expiry.</string>
</resources>